fixed style.css to finally remove whitespace padding between navbar and banner. added banner, other stuff

--- a/pelican-bootstrap3/static/css/style.css
+++ b/pelican-bootstrap3/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 70px;
+    padding-top: 42px; //THIS IS THE DANG PADDING THAT CONTROLS THE PADDING BETWEEN NAVBAR AND BANNER, PRESUMABLY BECAUSE NAVBAR CLASS IS CONTAINED WITHIN THE BODY FOR SOME REASON
 }
 
 #sidebar .list-group, #sidebar .list-group-item {
